# aura-decor-hq

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  start-aura.bat  vercel.json
.github/workflows/: deploy-pages.yml  deploy-vercel.yml
bridge/: get_token.html  obsidian_bridge.py  start-bridge.bat
dashboard/: aura-office.html
n8n-workflows/: aliexpress-product-sync.json  daily-kpi-report.json  shopify-order-to-obsidian.json  weekly-audit-schedule.json
src/meu_primeiro_time/: crew.py  main.py
src/meu_primeiro_time/config/: agents.yaml  tasks.yaml
